--- a/Health/app/src/main/AndroidManifest.xml
+++ b/Health/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/SplashScreenLauncher">
+
+        <activity
+            android:name=".ActivitySleepStatistics"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ActivityImageSelection"
             android:screenOrientation="portrait" />
