--- a/Health/app/src/main/AndroidManifest.xml
+++ b/Health/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/SplashScreenLauncher">
+        <activity android:name=".ActivityNutrControlStatistics"></activity>
+        <activity android:name=".ActivityAddingDayMenu" />
         <activity
             android:name=".ActivityRecommendedMenu"
             android:screenOrientation="portrait" />
