--- a/Health/app/build.gradle
+++ b/Health/app/build.gradle
@@ -39,5 +39,5 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
-
+    implementation 'pl.pawelkleczkowski.customgauge:CustomGauge:1.0.4'
 }
