--- a/Health/app/src/main/AndroidManifest.xml
+++ b/Health/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.health">
 
     <application
@@ -10,11 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/SplashScreenLauncher">
+        <activity android:name=".ActivityDescription"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ActivityRecommendationSleep"
             android:label="@string/title_activity_recommendation_sleep"
-            android:theme="@style/SplashScreenLauncher.NoActionBar"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@style/SplashScreenLauncher.NoActionBar" />
         <activity
             android:name=".ActivitySettingsProfile"
             android:screenOrientation="portrait" />
@@ -59,6 +60,7 @@
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
